# droplet-generation-setup-controller

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
CAMERA/: Nikon_control.py
CAMERA/DIGICAM_CONTROL/: digicam_Fast_Attempt.py  import subprocess.py  import subprocess_2.py  main.cpp
MASTER/: run_master.py
OSCILLOSCOPE/: Oscilloscope_logger.py  Oscilloscope_test.py
PUMP/: ControlArduino.py  ControlArduino2.py  control_mzr7245.py  pump_logger.py
SCALE_SARTORIUS/: Script_read_Scale.py
docs/superpowers/plans/: 2026-05-02-droplet-lab-refactor.md  2026-05-17-sweep-function-generator-scale.md
docs/superpowers/specs/: 2026-05-02-droplet-lab-refactor-design.md  (+1 more)
experiments/: README.md  example_hpmc.yaml  example_sweep_mini.yaml
new_files/: Function_generator.py  ReadMe.md  Script_read_Scale_v2.py
src/droplet_lab/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py  orchestrator.py  state.py  storage.py  sweep.py
tests/cli/: test_cli.py
tests/devices/: test_base.py  test_camera_digicam.py  test_camera_fake.py  test_factory.py  test_function_generator_fake.py  test_function_generator_psg9080.py  test_oscilloscope_fake.py  test_oscilloscope_keysight.py  test_pump_fake.py  test_pump_mzr7245.py  test_scale_fake.py  test_scale_sartorius.py
tests/integration/: conftest.py  test_orchestrator_end_to_end.py
tests/unit/: test_config.py  test_logging_setup.py  test_state.py  test_storage.py  test_sweep.py
tests/workers/: test_camera_worker.py  test_pump_worker.py  test_scale_worker.py  test_scope_worker.py
(+17 files in other folders)
